# pixelia

./: .env.example  .gitignore  README.md  environment.yml  pixelia.py  pyproject.toml  requirements-dev.txt  requirements.txt
assets/cfg/: config.yml
src/: version.py
src/cli/: __init__.py  cli_parser.py
src/commands/: __init__.py  imagine.py  manage.py  utils.py
src/core/: client.py  cogs.py
src/helper/: capture.py  chrono.py  constants.py
src/messages/: __init__.py  custom_view.py  dispatcher.py  embedder.py  timestamps.py
src/models/: __init__.py  diffusion_model.py
